# ERKER2Phenopackets

./: .gitignore  .gitmodules  LICENSE  MapERKER2Phenopackets.py  MappingDicts.py  ParseErker.py  Phenopackets2JSON.py  README.md  TestingPhenopackets.ipynb  foo_test.py  pyproject.toml  refactored_notebook.ipynb  requirements.txt
.github/workflows/: move_pull_requests.yaml  python-app.yaml
ERKER notebooks/: MC4R_Phenopackets.ipynb  MC4R_Phenopackets_Refactored.ipynb  MC4R_mapping.ipynb  test1.ipynb
ERKER2Phenopackets/data/: sdv_synthetic_data.csv  sdv_synthetic_data_v1.5.csv
ERKER2Phenopackets/data/config/: config.cfg
ERKER2Phenopackets/data/general_pipeline/blueprints/: EDA.md
ERKER2Phenopackets/outdated/old/: MC4R_Phenopackets.ipynb
ERKER2Phenopackets/outdated/old_erker_mapping/: MappingDicts.py  ParseErker.py  __init__.py
ERKER2Phenopackets/src/: MC4R.ipynb  __init__.py
ERKER2Phenopackets/src/MC4R/: MapMC4R.py  MappingDicts.py  ParseMC4R.py  Pipeline.py  __init__.py  parse_mc4r.py  pipeline.ipynb  pipeline.py
ERKER2Phenopackets/src/analysis/: __init__.py  mc4r_analysis.py
ERKER2Phenopackets/src/analysis/comparison/: edit_distance.py  structure.py  traverse.py
ERKER2Phenopackets/src/decorators/: __init__.py  deprecate.py  log_args.py
ERKER2Phenopackets/src/logging_/: Logging_.py  __init__.py
ERKER2Phenopackets/src/mc4r/: __init__.py  map_mc4r.py  pipeline.py
ERKER2Phenopackets/src/utils/: ParallelizationUtils.py  ParsingUtils.py  PhenopacketValidation.py  Phenopackets2JSON.py  PolarsUtils.py  __init__.py  cleardir.py  dateutils.py  delete_files_in_folder.py  graphutils.py  last_phenopackets.py  parallelization_utils.py  parsing_utils.py  polars_utils.py  validate_phenopackets.py
ERKER2Phenopackets/tests/: test_ParallelizationUtils.py  test_ParseM4CR.py  test_ParsingUtils.py  test_edit_dist.py  test_parallelization_utils.py  test_parse_mc4r.py  test_parsing_utils.py  test_structure.py
data/: ERKER_v1.5iB_DataDictionary.csv  ERKER_v1.5ib_import_template.csv  sdv_synthetic_data.csv
data/config/: config.cfg
general_pipeline/blueprints/: EDA.md  Preprocessing.md
src/: CreateSynthData.ipynb  Foo.py  MapERKER2Phenopackets.py  MappingDicts.py  Phenopackets2JSON.py  PolarsUtils.py
src/ERKER notebooks/: MC4R_Phenopackets.ipynb  MC4R_Phenopackets_Refactored.ipynb  MC4R_Phenopackets_Refactored1.ipynb
src/MC4R/: MapMC4R.py  MappingDicts.py  ParseMC4R.py  __init__.py  notebook.ipynb  pipeline.ipynb  test.ipynb
src/erker_mapping/: MapERKER2Phenopackets.py  MappingDicts.py  ParseErker.py  __init__  __init__.py
src/logging/: Logging  Logging.py  __init__.py
src/logging_/: Logging_.py  __init__.py
src/old_erker_mapping/: MapERKER2Phenopackets.py  __init__.py
src/utils/: ParallelizationUtils.py  ParsingUtils.py  Phenopackets2JSON.py  PolarsUtils.py  __init__.py
test/: Foo_test.py  __init__.py
tests/: Foo_test.py  test_ParallelizationUtils.py  test_ParseM4CR.py
(+9 files in other folders)
