[project]
name = "ERKER2Phenopackets"
version = "1.5.0a1"
description = "Mapping the ERKER Dataset onto the Phenopackets Schema"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pipeline", "rare diseases", "phenopackets"]
authors = [
    {name = "Peter Robinson, MD, MSc", email = "peter.robinson@jax.org"},
    {name = "Daniel Danis, PhD", email = "daniel.danis@jax.org"},
    {name = "Adam Graefe", email = "adam.graefe@charite.de" },
    {name = "Filip Rehburg", email = "filip.rehburg@charite.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Medical Computer Science :: Mapping Data Set to Phenopackets",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "phenopackets", "polars", "protobuf==3.20.1", "loguru"
]

[project.optional-dependencies]
test = ["pytest==7.1.2", "ruff", "isort", "coverage", "pytest-cov"]

[project.urls]  # Optional
"Homepage" = "https://github.com/BIH-CEI/ERKER2Phenopackets"

[project.scripts]
pipeline = "ERKER2Phenopackets.src.MC4R.Pipeline:main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
